<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="textview">Simple Calculator</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="subtract">Subtract</string>
    <string name="division">Division</string>
    <string name="product">Product</string>
    <string name="answer">Answer</string>
</resources>